@@ -9,6 +9,7 @@ Version 1.0.5 to be released
 - Bug: Lazy loading HAS_MANY or MANY_MANY properties will get NULL instead of empty array when the result set is empty (Qiang)
 - Bug: CDateFormatter::formatYear() only returns one digit when the year pattern is 'yy' (Qiang)
 - New: Deprecated CHtml::getActiveId() (Qiang)
+- New: Added CDbCriteria::mergeWith() (Qiang)
 
 Version 1.0.4 April 5, 2009
 ---------------------------
